--- a/HackerNews/HackerNews-Info.plist
+++ b/HackerNews/HackerNews-Info.plist
@@ -41,7 +41,7 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
-	<string>Main_iPad</string>
+	<string></string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
